调整商品信息

--- a/application/index/view/index/shop_backend/save_shelf.html
+++ b/application/index/view/index/shop_backend/save_shelf.html
@@ -1405,7 +1405,7 @@
                                         <td rowspan="999">
                                             自定参数
                                             <br>
-                                            <div class="btn btn-primary" onclick="get_lastinfo()" title="获取最近参数信息">获取参数</div>
+                                            <div class="btn btn-primary" onclick="get_lastinfo()" title="获取最近参数信息" style="white-space: nowrap;margin-top:10px;padding:5px;">获取参数</div>
                                         </td>
                                         <td>
                                             <input type="text" class="layui-input" name="spec_name[]" placeholder="参数名称">
